--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.0",
         "prettier": "2.2.1",
+        "tailwind-scrollbar": "^1.2.4",
         "tailwindcss": "^2.0.1"
     },
     "dependencies": {
